chore: creating icons and splash image

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
   </body>
 </html>
 
-<!-- 
-  Próximo vídeo:
-  https://www.youtube.com/watch?v=VLDmAtNEurI&list=PLuXkauUmG1ZH7iJfW5GpAKAQTo_NL5PZ7&index=14
+<!--
+  Próximo vídeo (15):
+  https://www.youtube.com/watch?v=f_cDJp3M5xk&list=PLuXkauUmG1ZH7iJfW5GpAKAQTo_NL5PZ7&index=15
+
+  Figima:
+  https://www.figma.com/file/XzpoBF2xUaZPJm4C8Di1qC/Prova-de-Teste?node-id=17%3A2807
 -->
